# FCGI_Docker_WS

./: README.md  databasedriver.cpp  databasedriver.h  dataobject.cpp  dataobject.h  fcgi_server.cpp  jsonparser.cpp  jsonparser.h
DDL/: DDL.sql
nginx/: nginx.conf
requests/: req.txt
src/: CMakeLists.txt  databasedriver.cpp  databasedriver.h  fcgi_server.cpp  fcgi_server.h  jsonparser.cpp  jsonparser.h  main.cpp
